<resources>
    <string name="app_name">TrackerPro</string>
    <string name="welcome_string_1">Tracker</string>
    <string name="welcome_string_2">Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="stopwatch_default">00:00:00</string>
    <string name="start_tracking">Start</string>
    <string name="stop_tracking">Stop</string>
    <string name="pause_tracking">Pause</string>
    <string name="continue_tracking">Continue</string>
    <string name="time_default">00:00:00</string>

    <string name="distance">distance</string>
    <string name="speed">speed</string>
    <string name="calories">calories</string>
    <string name="average_speed">average speed</string>
    <string name="time">time</string>

    <string name="default_distance">0 m</string>
    <string name="default_speed">0,0 km/h</string>
    <string name="default_avg_speed">0,0 km/h</string>
    <string name="default_calories">0 kcal</string>
    <string name="activity">activity:</string>

    <string name="minutes">min</string>
    <string name="hours">h</string>
    <string name="seconds">sec</string>

    <string name="meters">m</string>

    <string name="hint_default_part_time">00</string>
    <string name="hint_enter_distance">Enter distance</string>



</resources>