<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my__black"
    tools:context=".ClassicModeFragment">


    <TextView
        android:id="@+id/textViewStopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="72dp"
        android:text="@string/stopwatch_default"
        android:textColor="@color/my_white"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStartTracking"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:layout_marginTop="352dp"

        android:backgroundTint="@color/my_orange"
        android:gravity="center_horizontal"
        android:text="@string/start_tracking"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStopwatch" />

    <TextView
        android:id="@+id/textViewDistanceCounter"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="104dp"
        android:text="TextView"
        android:textColor="@color/my_white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStopwatch" />

    <Button
        android:id="@+id/buttonStopTracking"
        android:enabled="false"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/my_orange"
        android:text="@string/stop_tracking"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTracking" />

</androidx.constraintlayout.widget.ConstraintLayout>